Library/AXL(Library)/C, C++/AXDev.h


DWORD    __stdcall AxlGetBoardAddress(long lBoardNo, DWORD *upBoardAddress);
DWORD    __stdcall AxlGetBoardID(long lBoardNo, DWORD *upBoardID);
DWORD    __stdcall AxlGetBoardVersion(long lBoardNo, DWORD *upBoardVersion);
DWORD    __stdcall AxlGetModuleID(long lBoardNo, long lModulePos, DWORD *upModuleID);
DWORD    __stdcall AxlGetModuleVersion(long lBoardNo, long lModulePos, DWORD *upModuleVersion);
DWORD    __stdcall AxlGetModuleNodeInfo(long lBoardNo, long lModulePos, long *upNetNo, DWORD *upNodeAddr);
DWORD    __stdcall AxlSetDataFlash(long lBoardNo, long lPageAddr, long lBytesNum, BYTE *bpSetData);
DWORD    __stdcall AxlSetEStopInterLock(long lBoardNo, DWORD dwInterLock, DWORD dwDigFilterVal);
DWORD    __stdcall AxlGetEStopInterLock(long lBoardNo, DWORD *dwInterLock, DWORD  *dwDigFilterVal);
DWORD    __stdcall AxlReadEStopInterLock(long lBoardNo, DWORD *dwInterLock);
DWORD    __stdcall AxlGetDataFlash(long lBoardNo, long lPageAddr, long lBytesNum, BYTE *bpGetData);
DWORD    __stdcall AxaInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
DWORD    __stdcall AxdInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
DWORD    __stdcall AxmSetCommand(long lAxisNo, IPCOMMAND sCommand);
DWORD    __stdcall AxmSetCommandData08(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
DWORD    __stdcall AxmGetCommandData08(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
DWORD    __stdcall AxmSetCommandData16(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
DWORD    __stdcall AxmGetCommandData16(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
DWORD    __stdcall AxmSetCommandData24(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
DWORD    __stdcall AxmGetCommandData24(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
DWORD    __stdcall AxmSetCommandData32(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
DWORD    __stdcall AxmGetCommandData32(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
DWORD    __stdcall AxmSetCommandQi(long lAxisNo, QICOMMAND sCommand);
DWORD    __stdcall AxmSetCommandData08Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
DWORD    __stdcall AxmGetCommandData08Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
DWORD    __stdcall AxmSetCommandData16Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
DWORD    __stdcall AxmGetCommandData16Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
DWORD    __stdcall AxmSetCommandData24Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
DWORD    __stdcall AxmGetCommandData24Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
DWORD    __stdcall AxmSetCommandData32Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
DWORD    __stdcall AxmGetCommandData32Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
DWORD    __stdcall AxmGetPortData(long lAxisNo,  WORD wOffset, DWORD *upData);
DWORD    __stdcall AxmSetPortData(long lAxisNo, WORD wOffset, DWORD dwData);
DWORD    __stdcall AxmGetPortDataQi(long lAxisNo, WORD byOffset, WORD *wData);
DWORD    __stdcall AxmSetPortDataQi(long lAxisNo, WORD byOffset, WORD wData);
DWORD    __stdcall AxmSetScriptCaptionIp(long lAxisNo, long sc, DWORD event, DWORD data);
DWORD    __stdcall AxmGetScriptCaptionIp(long lAxisNo, long sc, DWORD *event, DWORD *data);
DWORD    __stdcall AxmSetScriptCaptionQi(long lAxisNo, long sc, DWORD event, DWORD cmd, DWORD data);
DWORD    __stdcall AxmGetScriptCaptionQi(long lAxisNo, long sc, DWORD *event, DWORD *cmd, DWORD *data);
DWORD    __stdcall AxmSetScriptCaptionQueueClear(long lAxisNo, DWORD uSelect);
DWORD    __stdcall AxmGetScriptCaptionQueueCount(long lAxisNo, DWORD *updata, DWORD uSelect);
DWORD    __stdcall AxmGetScriptCaptionQueueDataCount(long lAxisNo, DWORD *updata, DWORD uSelect);
DWORD    __stdcall AxmBoardWriteByte(long lBoardNo, WORD wOffset, BYTE byData);
DWORD    __stdcall AxmBoardReadByte(long lBoardNo, WORD wOffset, BYTE *byData);
DWORD    __stdcall AxmBoardWriteWord(long lBoardNo, WORD wOffset, WORD wData);
DWORD    __stdcall AxmBoardReadWord(long lBoardNo, WORD wOffset, WORD *wData);
DWORD    __stdcall AxmBoardWriteDWord(long lBoardNo, WORD wOffset, DWORD dwData);
DWORD    __stdcall AxmBoardReadDWord(long lBoardNo, WORD wOffset, DWORD *dwData);
DWORD    __stdcall AxmModuleWriteByte(long lBoardNo, long lModulePos, WORD wOffset, BYTE byData);
DWORD    __stdcall AxmModuleReadByte(long lBoardNo, long lModulePos, WORD wOffset, BYTE *byData);
DWORD    __stdcall AxmModuleWriteWord(long lBoardNo, long lModulePos, WORD wOffset, WORD wData);
DWORD    __stdcall AxmModuleReadWord(long lBoardNo, long lModulePos, WORD wOffset, WORD *wData);
DWORD    __stdcall AxmModuleWriteDWord(long lBoardNo, long lModulePos, WORD wOffset, DWORD dwData);
DWORD    __stdcall AxmModuleReadDWord(long lBoardNo, long lModulePos, WORD wOffset, DWORD *dwData);
DWORD    __stdcall AxmStatusSetActComparatorPos(long lAxisNo, double dPos);
DWORD    __stdcall AxmStatusGetActComparatorPos(long lAxisNo, double *dpPos);
DWORD    __stdcall AxmStatusSetCmdComparatorPos(long lAxisNo, double dPos);
DWORD    __stdcall AxmStatusGetCmdComparatorPos(long lAxisNo, double *dpPos);
DWORD    __stdcall AxmLineMoveVel(long lCoord, double dVel, double dAccel, double dDecel);
DWORD    __stdcall AxmSensorSetSignal(long lAxisNo, DWORD uLevel);
DWORD    __stdcall AxmSensorGetSignal(long lAxisNo, DWORD *upLevel);
DWORD    __stdcall AxmSensorReadSignal(long lAxisNo, DWORD *upStatus);
DWORD    __stdcall AxmSensorMovePos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, long lMethod);
DWORD    __stdcall AxmSensorStartMovePos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, long lMethod);
DWORD    __stdcall AxmHomeGetStepTrace(long lAxisNo, long *lpStepCount, DWORD *upMainStepNumber, DWORD *upStepNumber, DWORD *upStepBranch);
DWORD    __stdcall AxmHomeSetConfig(long lAxisNo, DWORD uZphasCount, long lHomeMode, long lClearSet, double dOrgVel, double dLastVel, double dLeavePos);
DWORD    __stdcall AxmHomeGetConfig(long lAxisNo, DWORD *upZphasCount, long *lpHomeMode, long *lpClearSet, double *dpOrgVel, double *dpLastVel, double *dpLeavePos); 
DWORD    __stdcall AxmHomeSetMoveSearch(long lAxisNo, double dVel, double dAccel, double dDecel);
DWORD    __stdcall AxmHomeSetMoveReturn(long lAxisNo, double dVel, double dAccel, double dDecel);
DWORD    __stdcall AxmHomeSetMoveLeave(long lAxisNo, double dVel, double dAccel, double dDecel);
DWORD    __stdcall AxmHomeSetMultiMoveSearch(long lArraySize, long *lpAxesNo, double *dpVel, double *dpAccel, double *dpDecel);
DWORD    __stdcall AxmContiSetProfileMode(long lCoord, DWORD uProfileMode);
DWORD    __stdcall AxmContiGetProfileMode(long lCoord, DWORD *upProfileMode);
DWORD    __stdcall AxdiInterruptFlagReadBit(long lModuleNo, long lOffset, DWORD *upValue);
DWORD    __stdcall AxdiInterruptFlagReadByte(long lModuleNo, long lOffset, DWORD *upValue);
DWORD    __stdcall AxdiInterruptFlagReadWord(long lModuleNo, long lOffset, DWORD *upValue);
DWORD    __stdcall AxdiInterruptFlagReadDword(long lModuleNo, long lOffset, DWORD *upValue);
DWORD    __stdcall AxdiInterruptFlagRead(long lOffset, DWORD *upValue);
DWORD    __stdcall AxmLogSetAxis(long lAxisNo, DWORD uUse);
DWORD    __stdcall AxmLogGetAxis(long lAxisNo, DWORD *upUse);
DWORD    __stdcall AxaiLogSetChannel(long lChannelNo, DWORD uUse);
DWORD    __stdcall AxaiLogGetChannel(long lChannelNo, DWORD *upUse);
DWORD    __stdcall AxaoLogSetChannel(long lChannelNo, DWORD uUse);
DWORD    __stdcall AxaoLogGetChannel(long lChannelNo, DWORD *upUse);
DWORD    __stdcall AxdLogSetModule(long lModuleNo, DWORD uUse);
DWORD    __stdcall AxdLogGetModule(long lModuleNo, DWORD *upUse);
DWORD    __stdcall AxlSetFirmwareCopy(long lBoardNo, WORD *wData, WORD *wCmdData);
DWORD    __stdcall AxlSetFirmwareUpdate(long lBoardNo);
DWORD    __stdcall AxlCheckStatus(long lBoardNo, DWORD* dwStatus);
DWORD    __stdcall AxlRtexUniversalCmd(long lBoardNo, WORD wCmd, WORD wOffset, WORD *wData);
DWORD    __stdcall AxmRtexSlaveCmd(long lAxisNo, DWORD dwCmdCode, DWORD dwTypeCode, DWORD dwIndexCode, DWORD dwCmdConfigure, DWORD dwValue);
DWORD    __stdcall AxmRtexGetSlaveCmdResult(long lAxisNo, DWORD* dwIndex, DWORD *dwValue);
DWORD    __stdcall AxmRtexGetSlaveCmdResultEx(long lAxisNo, DWORD* dwpCommand, DWORD* dwpType, DWORD* dwpIndex, DWORD *dwpValue);
DWORD    __stdcall AxmRtexGetAxisStatus(long lAxisNo, DWORD *dwStatus);
DWORD    __stdcall AxmRtexGetAxisReturnData(long lAxisNo,  DWORD *dwReturn1, DWORD *dwReturn2, DWORD *dwReturn3);
DWORD    __stdcall AxmRtexGetAxisSlaveStatus(long lAxisNo,  DWORD *dwStatus);
DWORD    __stdcall AxmSetAxisCmd(long lAxisNo, DWORD* tagCommand);
DWORD    __stdcall AxmGetAxisCmdResult(long lAxisNo, DWORD* tagCommand);
DWORD   __stdcall AxdSetAndGetSlaveCmdResult(long lModuleNo, DWORD* tagSetCommand, DWORD* tagGetCommand);
DWORD   __stdcall AxaSetAndGetSlaveCmdResult(long lModuleNo, DWORD* tagSetCommand, DWORD* tagGetCommand);
DWORD   __stdcall AxcSetAndGetSlaveCmdResult(long lModuleNo, DWORD* tagSetCommand, DWORD* tagGetCommand);
DWORD    __stdcall AxlGetDpRamData(long lBoardNo, WORD wAddress, DWORD* dwpRdData);
DWORD    __stdcall AxlBoardReadDpramWord(long lBoardNo, WORD wOffset, DWORD* dwpRdData);
DWORD   __stdcall AxlBoardWriteDpramWord(long lBoardNo, WORD wOffset, DWORD dwWrData);
DWORD   __stdcall AxlSetSendBoardEachCommand(long lBoardNo, DWORD dwCommand, DWORD* dwpSendData, DWORD dwLength);
DWORD    __stdcall AxlSetSendBoardCommand(long lBoardNo, DWORD dwCommand, DWORD* dwpSendData, DWORD dwLength);
DWORD    __stdcall AxlGetResponseBoardCommand(long lBoardNo, DWORD* dwpReadData);
DWORD    __stdcall AxmInfoGetFirmwareVersion(long lAxisNo, unsigned char* ucaFirmwareVersion);
DWORD    __stdcall AxaInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
DWORD    __stdcall AxdInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
DWORD    __stdcall AxcInfoGetFirmwareVersion(long lModuleNo, unsigned char* ucaFirmwareVersion);
DWORD    __stdcall AxmSetTorqFeedForward(long lAxisNo, DWORD dwTorqFeedForward);
DWORD    __stdcall AxmGetTorqFeedForward(long lAxisNo, DWORD* dwpTorqFeedForward);
DWORD    __stdcall AxmSetVelocityFeedForward(long lAxisNo, DWORD dwVelocityFeedForward);
DWORD    __stdcall AxmGetVelocityFeedForward(long lAxisNo, DWORD* dwpVelocityFeedForward);
DWORD   __stdcall AxmSignalSetEncoderType(long lAxisNo, DWORD dwEncoderType);
DWORD   __stdcall AxmSignalGetEncoderType(long lAxisNo, DWORD* dwpEncoderType);
DWORD    __stdcall AxmMotSetUserMotion(long lAxisNo, double dVelocity, double dAccel, double dDecel);
DWORD    __stdcall AxmMotSetUserMotionUsage(long lAxisNo, DWORD dwUsage);
DWORD    __stdcall  AxmMotSetUserPosMotion(long lAxisNo, double dVelocity, double dAccel, double dDecel, double dLoadPos, double dUnLoadPos, DWORD dwFilter, DWORD dwDelay);
DWORD    __stdcall  AxmMotSetUserPosMotionUsage(long lAxisNo, DWORD dwUsage);
DWORD  __stdcall AxcKeWriteRamDataAddr(long lChannelNo, DWORD dwAddr, DWORD dwData);
DWORD  __stdcall AxcKeReadRamDataAddr(long lChannelNo, DWORD dwAddr, DWORD* dwpData);
DWORD  __stdcall AxcKeResetRamDataAll(long lModuleNo, DWORD dwData);
DWORD  __stdcall AxcTriggerSetTimeout(long lChannelNo, DWORD dwTimeout);
DWORD  __stdcall AxcTriggerGetTimeout(long lChannelNo, DWORD* dwpTimeout);
DWORD  __stdcall AxcStatusGetWaitState(long lChannelNo, DWORD* dwpState);
DWORD  __stdcall AxcStatusSetWaitState(long lChannelNo, DWORD dwState);
DWORD  __stdcall AxcKeSetCommandData32(long lChannelNo, DWORD dwCommand, DWORD dwData);
DWORD  __stdcall AxcKeSetCommandData16(long lChannelNo, DWORD dwCommand, WORD wData);
DWORD  __stdcall AxcKeGetCommandData32(long lChannelNo, DWORD dwCommand, DWORD *dwpData);
DWORD  __stdcall AxcKeGetCommandData16(long lChannelNo, DWORD dwCommand, WORD *wpData);
DWORD   __stdcall AxmSeqSetAxisMap(long lSeqMapNo, long lSeqMapSize, long* lSeqAxesNo);
DWORD   __stdcall AxmSeqGetAxisMap(long lSeqMapNo, long* lSeqMapSize, long* lSeqAxesNo);
DWORD   __stdcall AxmSeqSetMasterAxisNo(long lSeqMapNo, long lMasterAxisNo);
DWORD   __stdcall AxmSeqBeginNode(long lSeqMapNo);
DWORD   __stdcall AxmSeqEndNode(long lSeqMapNo);
DWORD   __stdcall AxmSeqStart(long lSeqMapNo, DWORD dwStartOption);
DWORD   __stdcall AxmSeqAddNode(long lSeqMapNo, double* dPosition, double dVelocity, double dAcceleration, double dDeceleration, double dNextVelocity);
DWORD   __stdcall AxmSeqGetNodeNum(long lSeqMapNo, long* lCurNodeNo);
DWORD   __stdcall AxmSeqGetTotalNodeNum(long lSeqMapNo, long* lTotalNodeCnt);
DWORD   __stdcall AxmSeqIsMotion(long lSeqMapNo, DWORD* dwInMotion);
DWORD   __stdcall AxmSeqWriteClear(long lSeqMapNo);
DWORD   __stdcall AxmSeqStop(long lSeqMapNo, DWORD dwStopMode);