Library/AXL(Library)/Delphi/AXDev.pas


    dll_name    = 'AXL.dll';
    function AxlGetBoardAddress; external dll_name name 'AxlGetBoardAddress';
    function AxlGetBoardID; external dll_name name 'AxlGetBoardID';
    function AxlGetBoardVersion; external dll_name name 'AxlGetBoardVersion';
    function AxlGetModuleID; external dll_name name 'AxlGetModuleID';
    function AxlGetModuleVersion; external dll_name name 'AxlGetModuleVersion';
    function AxlGetModuleNodeInfo; external dll_name name 'AxlGetModuleNodeInfo';
    function AxlSetDataFlash; external dll_name name 'AxlSetDataFlash';
    function AxlSetEStopInterLock; external dll_name name 'AxlSetEStopInterLock';
    function AxlGetEStopInterLock; external dll_name name 'AxlGetEStopInterLock';
    function AxlReadEStopInterLock; external dll_name name 'AxlReadEStopInterLock';
    function AxlGetDataFlash; external dll_name name 'AxlGetDataFlash';
    function AxaInfoGetModuleNo; external dll_name name 'AxaInfoGetModuleNo';
    function AxdInfoGetModuleNo; external dll_name name 'AxdInfoGetModuleNo';
    function AxmSetCommand; external dll_name name 'AxmSetCommand';
    function AxmSetCommandData08; external dll_name name 'AxmSetCommandData08';
    function AxmGetCommandData08; external dll_name name 'AxmGetCommandData08';
    function AxmSetCommandData16; external dll_name name 'AxmSetCommandData16';
    function AxmGetCommandData16; external dll_name name 'AxmGetCommandData16';
    function AxmSetCommandData24; external dll_name name 'AxmSetCommandData24';
    function AxmGetCommandData24; external dll_name name 'AxmGetCommandData24';
    function AxmSetCommandData32; external dll_name name 'AxmSetCommandData32';
    function AxmGetCommandData32; external dll_name name 'AxmGetCommandData32';
    function AxmSetCommandQi; external dll_name name 'AxmSetCommandQi';
    function AxmSetCommandData08Qi; external dll_name name 'AxmSetCommandData08Qi';
    function AxmGetCommandData08Qi; external dll_name name 'AxmGetCommandData08Qi';
    function AxmSetCommandData16Qi; external dll_name name 'AxmSetCommandData16Qi';
    function AxmGetCommandData16Qi; external dll_name name 'AxmGetCommandData16Qi';
    function AxmSetCommandData24Qi; external dll_name name 'AxmSetCommandData24Qi';
    function AxmGetCommandData24Qi; external dll_name name 'AxmGetCommandData24Qi';
    function AxmSetCommandData32Qi; external dll_name name 'AxmSetCommandData32Qi';
    function AxmGetCommandData32Qi; external dll_name name 'AxmGetCommandData32Qi';
    function AxmGetPortData; external dll_name name 'AxmGetPortData';
    function AxmSetPortData; external dll_name name 'AxmSetPortData';
    function AxmGetPortDataQi; external dll_name name 'AxmGetPortDataQi';
    function AxmSetPortDataQi; external dll_name name 'AxmSetPortDataQi';
    function AxmSetScriptCaptionIp; external dll_name name 'AxmSetScriptCaptionIp';
    function AxmGetScriptCaptionIp; external dll_name name 'AxmGetScriptCaptionIp';
    function AxmSetScriptCaptionQi; external dll_name name 'AxmSetScriptCaptionQi';
    function AxmGetScriptCaptionQi; external dll_name name 'AxmGetScriptCaptionQi';
    function AxmSetScriptCaptionQueueClear; external dll_name name 'AxmSetScriptCaptionQueueClear';
    function AxmGetScriptCaptionQueueCount; external dll_name name 'AxmGetScriptCaptionQueueCount';
    function AxmGetScriptCaptionQueueDataCount; external dll_name name 'AxmGetScriptCaptionQueueDataCount';
    function AxmGetOptimizeDriveData; external dll_name name 'AxmGetOptimizeDriveData';
    function AxmBoardWriteByte; external dll_name name 'AxmBoardWriteByte';
    function AxmBoardReadByte; external dll_name name 'AxmBoardReadByte';
    function AxmBoardWriteWord; external dll_name name 'AxmBoardWriteWord';
    function AxmBoardReadWord; external dll_name name 'AxmBoardReadWord';
    function AxmBoardWriteDWord; external dll_name name 'AxmBoardWriteDWord';
    function AxmBoardReadDWord; external dll_name name 'AxmBoardReadDWord';
    function AxmModuleWriteByte; external dll_name name 'AxmModuleWriteByte';
    function AxmModuleReadByte; external dll_name name 'AxmModuleReadByte';
    function AxmModuleWriteWord; external dll_name name 'AxmModuleWriteWord';
    function AxmModuleReadWord; external dll_name name 'AxmModuleReadWord';
    function AxmModuleWriteDWord; external dll_name name 'AxmModuleWriteDWord';
    function AxmModuleReadDWord; external dll_name name 'AxmModuleReadDWord';
    function AxmStatusSetActComparatorPos; external dll_name name 'AxmStatusSetActComparatorPos';
    function AxmStatusGetActComparatorPos; external dll_name name 'AxmStatusGetActComparatorPos';
    function AxmStatusSetCmdComparatorPos; external dll_name name 'AxmStatusSetCmdComparatorPos';
    function AxmStatusGetCmdComparatorPos; external dll_name name 'AxmStatusGetCmdComparatorPos';
    function AxmLineMoveVel; external dll_name name 'AxmLineMoveVel';
    function AxmSensorSetSignal; external dll_name name 'AxmSensorSetSignal';
    function AxmSensorGetSignal; external dll_name name 'AxmSensorGetSignal';
    function AxmSensorReadSignal; external dll_name name 'AxmSensorReadSignal';
    function AxmSensorMovePos; external dll_name name 'AxmSensorMovePos';
    function AxmSensorStartMovePos; external dll_name name 'AxmSensorStartMovePos';
    function AxmHomeGetStepTrace; external dll_name name 'AxmHomeGetStepTrace';
    function AxmHomeSetConfig; external dll_name name 'AxmHomeSetConfig';
    function AxmHomeGetConfig; external dll_name name 'AxmHomeGetConfig';
    function AxmHomeSetMoveSearch; external dll_name name 'AxmHomeSetMoveSearch';
    function AxmHomeSetMoveReturn; external dll_name name 'AxmHomeSetMoveReturn';
    function AxmHomeSetMoveLeave; external dll_name name 'AxmHomeSetMoveLeave';
    function AxmHomeSetMultiMoveSearch; external dll_name name 'AxmHomeSetMultiMoveSearch';
    function AxmContiSetProfileMode; external dll_name name 'AxmContiSetProfileMode';
    function AxmContiGetProfileMode; external dll_name name 'AxmContiGetProfileMode';
    function AxdiInterruptFlagReadBit; external dll_name name 'AxdiInterruptFlagReadBit';
    function AxdiInterruptFlagReadByte; external dll_name name 'AxdiInterruptFlagReadByte';
    function AxdiInterruptFlagReadWord; external dll_name name 'AxdiInterruptFlagReadWord';
    function AxdiInterruptFlagReadDword; external dll_name name 'AxdiInterruptFlagReadDword';
    function AxdiInterruptFlagRead; external dll_name name 'AxdiInterruptFlagRead';
    function AxmLogSetAxis; external dll_name name 'AxmLogSetAxis';
    function AxmLogGetAxis; external dll_name name 'AxmLogGetAxis';
    function AxaiLogSetChannel; external dll_name name 'AxaiLogSetChannel';
    function AxaiLogGetChannel; external dll_name name 'AxaiLogGetChannel';
    function AxaoLogSetChannel; external dll_name name 'AxaoLogSetChannel';
    function AxaoLogGetChannel; external dll_name name 'AxaoLogGetChannel';
    function AxdLogSetModule; external dll_name name 'AxdLogSetModule';
    function AxdLogGetModule; external dll_name name 'AxdLogGetModule';
    function AxlGetFirmwareVersion; external dll_name name 'AxlGetFirmwareVersion';
    function AxlSetFirmwareCopy; external dll_name name 'AxlSetFirmwareCopy';
    function AxlSetFirmwareUpdate; external dll_name name 'AxlSetFirmwareUpdate';
    function AxlCheckStatus; external dll_name name 'AxlCheckStatus';
    function AxlRtexUniversalCmd; external dll_name name 'AxlRtexUniversalCmd';
    function AxmRtexSlaveCmd; external dll_name name 'AxmRtexSlaveCmd';
    function AxmRtexGetSlaveCmdResult; external dll_name name 'AxmRtexGetSlaveCmdResult';
    function AxmRtexGetSlaveCmdResultEx; external dll_name name 'AxmRtexGetSlaveCmdResultEx';
    function AxmRtexGetAxisStatus; external dll_name name 'AxmRtexGetAxisStatus';
    function AxmRtexGetAxisReturnData; external dll_name name 'AxmRtexGetAxisReturnData';
    function AxmRtexGetAxisSlaveStatus; external dll_name name 'AxmRtexGetAxisSlaveStatus';
    function AxmSetAxisCmd; external dll_name name 'AxmSetAxisCmd';
    function AxmGetAxisCmdResult; external dll_name name 'AxmGetAxisCmdResult';
    function AxdSetAndGetSlaveCmdResult; external dll_name name 'AxdSetAndGetSlaveCmdResult';
    function AxaSetAndGetSlaveCmdResult; external dll_name name 'AxaSetAndGetSlaveCmdResult';
    function AxcSetAndGetSlaveCmdResult; external dll_name name 'AxcSetAndGetSlaveCmdResult';
    function AxlGetDpRamData; external dll_name name 'AxlGetDpRamData';
    function AxlBoardReadDpramWord; external dll_name name 'AxlBoardReadDpramWord';
    function AxlBoardWriteDpramWord; external dll_name name 'AxlBoardWriteDpramWord';
    function AxlSetSendBoardEachCommand; external dll_name name 'AxlSetSendBoardEachCommand';
    function AxlSetSendBoardCommand; external dll_name name 'AxlSetSendBoardCommand';
    function AxlGetResponseBoardCommand; external dll_name name 'AxlGetResponseBoardCommand';
    function AxmInfoGetFirmwareVersion; external dll_name name 'AxmInfoGetFirmwareVersion';
    function AxaInfoGetFirmwareVersion; external dll_name name 'AxaInfoGetFirmwareVersion';
    function AxdInfoGetFirmwareVersion; external dll_name name 'AxdInfoGetFirmwareVersion';
    function AxcInfoGetFirmwareVersion; external dll_name name 'AxcInfoGetFirmwareVersion';
    function AxmSetTorqFeedForward; external dll_name name 'AxmSetTorqFeedForward';
    function AxmGetTorqFeedForward; external dll_name name 'AxmGetTorqFeedForward';
    function AxmSetVelocityFeedForward; external dll_name name 'AxmSetVelocityFeedForward';
    function AxmGetVelocityFeedForward; external dll_name name 'AxmGetVelocityFeedForward';
    function AxmSignalSetEncoderType; external dll_name name 'AxmSignalSetEncoderType';
    function AxmSignalGetEncoderType; external dll_name name 'AxmSignalGetEncoderType';
    function AxmMotSetUserMotion; external dll_name name 'AxmMotSetUserMotion';
    function AxmMotSetUserMotionUsage; external dll_name name 'AxmMotSetUserMotionUsage';
    function AxmMotSetUserPosMotion; external dll_name name 'AxmMotSetUserPosMotion';
    function AxmMotSetUserPosMotionUsage; external dll_name name 'AxmMotSetUserPosMotionUsage';
    function AxcKeWriteRamDataAddr; external dll_name name 'AxcKeWriteRamDataAddr';
    function AxcKeReadRamDataAddr; external dll_name name 'AxcKeReadRamDataAddr';
    function AxcKeResetRamDataAll; external dll_name name 'AxcKeResetRamDataAll';
    function AxcTriggerSetTimeout; external dll_name name 'AxcTriggerSetTimeout';
    function AxcTriggerGetTimeout; external dll_name name 'AxcTriggerGetTimeout';
    function AxcStatusGetWaitState; external dll_name name 'AxcStatusGetWaitState';
    function AxcStatusSetWaitState; external dll_name name 'AxcStatusSetWaitState';
    function AxcKeSetCommandData32; external dll_name name 'AxcKeSetCommandData32';
    function AxcKeSetCommandData16; external dll_name name 'AxcKeSetCommandData16';
    function AxcKeGetCommandData32; external dll_name name 'AxcKeGetCommandData32';
    function AxcKeGetCommandData16; external dll_name name 'AxcKeGetCommandData16';
    function AxmSeqSetAxisMap; external dll_name name 'AxmSeqSetAxisMap';
    function AxmSeqGetAxisMap; external dll_name name 'AxmSeqGetAxisMap';
    function AxmSeqSetMasterAxisNo; external dll_name name 'AxmSeqSetMasterAxisNo';
    function AxmSeqBeginNode; external dll_name name 'AxmSeqBeginNode';
    function AxmSeqEndNode; external dll_name name 'AxmSeqEndNode';
    function AxmSeqStart; external dll_name name 'AxmSeqStart';
    function AxmSeqAddNode; external dll_name name 'AxmSeqAddNode';
    function AxmSeqGetNodeNum; external dll_name name 'AxmSeqGetNodeNum';
    function AxmSeqGetTotalNodeNum; external dll_name name 'AxmSeqGetTotalNodeNum';
    function AxmSeqIsMotion; external dll_name name 'AxmSeqIsMotion';
    function AxmSeqWriteClear; external dll_name name 'AxmSeqWriteClear';
    function AxmSeqStop; external dll_name name 'AxmSeqStop';
